# zed-yarn-spinner

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  extension.toml
examples/: basic_dialogue.yarn  hello.yarn  story.yarn  test.yarn
languages/yarn-spinner/: brackets.scm  config.toml  highlights.scm  indents.scm  outline.scm  redactions.scm  runnables.scm  textobjects.scm
src/: lib.rs
