[package]
name = "zed-yarn-spinner"
version = "0.0.2"
edition = "2024"
description = "Yarn Spinner language support for Zed"
repository = "https://github.com/yuna0x0/zed-yarn-spinner"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "language-server", "zed", "yarn-spinner", "zed-extension"]
categories = ["development-tools", "programming-languages"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.6.0"
